--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -745,7 +745,9 @@
             <h1>
                 Questions? <br>Please email us at raul@raulavilainc.com
             </h1>
-            <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"></a>
+            <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
+            <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/Facebook1.png' %}" height="32"> </a>
+            <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/Twitter1.png' %}" height="32"> </a>
 
         </div>
 
