--- a/Raul_Inc/templates/Raul_Inc/pressvogue.html
+++ b/Raul_Inc/templates/Raul_Inc/pressvogue.html
@@ -41,9 +41,15 @@
         <li><a href="{%url 'Raul_Inc_contact' %}">CONTACT</a></li>
         <li>
             <div id="social">
-                <a href="https://www.facebook.com/RAULAVILAINC" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="https://twitter.com/RaulAvilaInc" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                <a href="http://instagram.com/raulavilainc" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/RAULAVILAINC">
+                    <img src="{%static 'Raul_Inc/Images/Facebook10.ico' %}" width="17" height="17">
+                </a>
+                <a href="https://twitter.com/RaulAvilaInc">
+                    <img src="{%static 'Raul_Inc/Images/Twitter10.png' %}" width="17" height="17">
+                </a>
+                <a href="http://instagram.com/raulavilainc">
+                    <img src="{%static 'Raul_Inc/Images/ig10.png' %}" width="17" height="17">
+                </a>
             </div>
         </li>
     </ul>
