--- a/Raul_Inc/templates/Raul_Inc/pressvogue.html
+++ b/Raul_Inc/templates/Raul_Inc/pressvogue.html
@@ -56,7 +56,7 @@
         <!-- 2016 special -->
         <div class="group">
             <a id="thumbs" class="lightbox" href="{%static 'Raul_Inc/Images/August_2016_1.jpg' %}" width="500" height="598" rel="group" num="0">
-                <img src="i/retinaThumbs/August_2016_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/August_2016_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Special Edition</span><br>Met Gala 2016</div>
             </a>
             <a class="lightbox" href="{%static 'Raul_Inc/Images/August 2016 2.jpg' %}" width="500" height="678" rel="group" num="1"></a>
@@ -85,7 +85,7 @@
         <!--THUMB 2-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/Met 2015 FINAL 1.jpg" width="500" height="678" rel="group" num="15">
-                <img src="i/retinaThumbs/met_2015_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/met_2015_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Special Edition</span><br>Met Gala 2015</div>
             </a>
             <a class="lightbox" href="gallery/Met 2015 FINAL 2.jpg" width="500" height="678" rel="group" num="16"></a>
@@ -101,7 +101,7 @@
         <!--THUMB 3-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/Met 2014 FINAL 1.jpg" width="500" height="678" rel="group" num="24">
-                <img src="i/retinaThumbs/met_2014_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/met_2014_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Special Edition</span><br>Met Gala 2014</div>
             </a>
             <a class="lightbox" href="gallery/Met 2014 FINAL 2.jpg" width="500" height="678" rel="group" num="25"></a>
@@ -112,7 +112,7 @@
         <!--THUMB 4-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/Met 2013 FINAL 1.jpg" width="500" height="678" rel="group" num="28">
-                <img src="i/retinaThumbs/met_2013_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/met_2013_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Special Edition</span><br>Met Gala 2013</div>
             </a>
             <a class="lightbox" href="gallery/Met 2013 FINAL 4.jpg" width="500" height="678" rel="group" num="29"></a>
@@ -123,7 +123,7 @@
         <!--THUMB 5-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/July 2012 FINAL 1.jpg" width="500" height="678" rel="group" num="32">
-                <img src="i/retinaThumbs/july_2012_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/july_2012_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Met Gala 2012</span><br>July 2012</div>
             </a>
             <a class="lightbox" href="gallery/July 2012 FINAL 3-4.jpg" width="1000" height="678" rel="group" num="33"></a>
@@ -136,7 +136,7 @@
         <!--THUMB 6-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/March 2012 FINAL 1.jpg" width="500" height="678" rel="group" num="38">
-                <img src="i/retinaThumbs/march_2012_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/march_2012_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Tory Burch South Hampton Home</span><br>March 2012</div>
             </a>
             <a class="lightbox" href="gallery/March 2012 FINAL 4.jpg" width="500" height="678" rel="group" num="39"></a>
@@ -147,7 +147,7 @@
         <!--THUMB 7-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/January 2012 FINAL 1.jpg" width="500" height="678" rel="group" num="42">
-                <img src="i/retinaThumbs/january_2012_final_1.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/january_2012_final_1.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: MOMA Film Benefit</span><br>January 2012</div>
             </a>
             <a class="lightbox" href="gallery/January 2012 FINAL 2.jpg" width="500" height="678" rel="group" num="43"></a>
@@ -155,8 +155,8 @@
 
         <!--THUMB 8-->
         <div class="group">
-            <a id="thumbs" class="lightbox" href="gallery/2011 July/July2011cover.jpg" width="500" height="678" rel="group" num="44">
-                <img src="i/retinaThumbs/15.jpg" width="68" height="96">
+            <a id="thumbs" class="lightbox" href="{%static 'Raul_Inc/Images/July2011cover.jpg' %}" width="500" height="678" rel="group" num="44">
+                <img src="{%static 'Raul_Inc/Images/155.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Met Gala 2011</span><br>July 2011</div>
             </a>
             <a class="lightbox" href="gallery/2011 July/03_04_RevelRevel.jpg" width="1000" height="678" rel="group" num="45"></a>
@@ -167,7 +167,7 @@
         <!--THUMB 9-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2010/2010 August/AugustCover2010.jpg" width="500" height="678" rel="group" num="48">
-                <img src="i/retinaThumbs/14.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/144.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Miranda Brooks Wedding</span><br>August 2010</div>
             </a>
             <a class="lightbox" href="gallery/2010/2010 August/02_MirandaBrooks.jpg" width="500" height="678" rel="group" num="49"></a>
@@ -187,7 +187,7 @@
         <!--THUMB 11-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2009 July/JulyCover2009.jpg" width="500" height="678" rel="group" num="50">
-                <img src="i/retinaThumbs/12.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/122.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Met Gala 2009</span><br>July 2009</div>
             </a>
             <a class="lightbox" href="gallery/2009 July/01_TheWildBunch.jpg" width="500" height="678" rel="group" num="51"></a>
@@ -198,7 +198,7 @@
         <!--THUMB 12-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2008 July/JulyCover2008.jpg" width="500" height="678" rel="group" num="54">
-                <img src="i/retinaThumbs/10.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/1010.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Met Gala 2008</span><br>July 2008</div>
             </a>
             <a class="lightbox" href="gallery/2008 July/01_02_Hero'sWelcome.jpg" width="1000" height="678" rel="group" num="55"></a>
@@ -212,7 +212,7 @@
         <!--THUMB 13-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2008 March/MarchCover2008.jpg" width="500" height="678" rel="group" num="61">
-                <img src="i/retinaThumbs/11.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/1111.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Lauren Davis and Andres Santo Domingo Wedding</span><br>March 2008</div>
             </a>
             <a class="lightbox" href="gallery/2008 March/01_TheBrideWoreRicci.jpg" width="500" height="678" rel="group" num="62"></a>
@@ -224,7 +224,7 @@
         <!--THUMB 14-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2007 July/JulyCover.jpg" width="500" height="678" rel="group" num="66">
-                <img src="i/retinaThumbs/09.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0909.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Met Gala 2007</span><br>July 2007</div>
             </a>
             <a class="lightbox" href="gallery/2007 July/01_02_GrandAffair.jpg" width="1000" height="678" rel="group" num="67"></a>
@@ -238,7 +238,7 @@
         <!--THUMB 15-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2007 January/JanuaryCover.jpg" width="500" height="678" rel="group" num="73">
-                <img src="i/retinaThumbs/08.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0808.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Vogue CFDA Fashion Fund Dinner</span><br>January 2007</div>
             </a>
             <a class="lightbox" href="gallery/2007 January/01_StarQuality.jpg" width="500" height="678" rel="group" num="74"></a>
@@ -247,7 +247,7 @@
         <!--THUMB 16-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2005 2006/2006 November/NovemberCover.jpg" width="500" height="678" rel="group" num="75">
-                <img src="i/retinaThumbs/07.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0707.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Artist Ball</span><br>November 2006</div>
             </a>
             <a class="lightbox" href="gallery/2005 2006/2006 November/ExhibitA.jpg" width="500" height="678" rel="group" num="76"></a>
@@ -256,7 +256,7 @@
         <!--THUMB 17-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2005 2006/2006 May/MayCover.jpg" width="500" height="678" rel="group" num="77">
-                <img src="i/retinaThumbs/06.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0606.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Lauren Davis 30<sup>th</sup> Birthday</span><br>May 2006</div>
             </a>
             <a class="lightbox" href="gallery/2005 2006/2006 May/01_LaurenDavis.jpg" width="500" height="678" rel="group" num="78"></a>
@@ -266,7 +266,7 @@
         <!--THUMB 18-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2005 2006/2006 February/FebruaryCover.jpg" width="500" height="678" rel="group" num="80">
-                <img src="i/retinaThumbs/05.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0505.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Aerin Lauder Hosting Dinner Party</span><br>February 2006</div>
             </a>
             <a class="lightbox" href="gallery/2005 2006/2006 February/01_HomeAgain.jpg" width="500" height="678" rel="group" num="81"></a>
@@ -276,7 +276,7 @@
         <!--THUMB 19-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2005 2006/2006 January/JanuaryCover.jpg" width="500" height="678" rel="group" num="83">
-                <img src="i/retinaThumbs/04.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0404.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: 7<sup>TH</sup> on Sale</span><br>January 2006</div>
             </a>
             <a class="lightbox" href="gallery/2005 2006/2006 January/01_WhiteNight.jpg" width="500" height="678" rel="group" num="84"></a>
@@ -286,7 +286,7 @@
         <!--THUMB 20-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2005 2006/2005 June/JuneCover.jpg" width="500" height="678" rel="group" num="86">
-                <img src="i/retinaThumbs/03.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0303.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Rachel Feinstein's Opening Party</span><br>June 2005</div>
             </a>
             <a class="lightbox" href="gallery/2005 2006/2005 June/01_Weekenders.jpg" width="500" height="678" rel="group" num="87"></a>
@@ -296,7 +296,7 @@
         <!--THUMB 21-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2004/2004 November/01_NovemberCover.jpg" width="500" height="678" rel="group" num="89">
-                <img src="i/retinaThumbs/02.jpg" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0202.jpg' %}" width="68" height="96">
                 <div class="description"><span>Vogue: Marc Jacobs Spring 2005 Ready To Wear Show</span><br>November 2004</div>
             </a>
             <a class="lightbox" href="gallery/2004/2004 November/01_HelloBeautiful.jpg" width="500" height="678" rel="group" num="90"></a>
@@ -309,14 +309,14 @@
         <!--THUMB 22-->
         <div class="group">
             <a id="thumbs" class="lightbox" href="gallery/2004/2004 October/01.jpg" width="500" height="678" rel="group" num="95">
-                <img src="i/retinaThumbs/01.jpg" alt="October Vogue" width="68" height="96">
+                <img src="{%static 'Raul_Inc/Images/0101.jpg' %}" alt="October Vogue" width="68" height="96">
                 <div class="description"><span>Vogue: New York Public Library Event</span><br>October 2004</div>
             </a>
             <a class="lightbox" href="gallery/2004/2004 October/02.jpg" width="500" height="678" rel="group" num="96"></a>
             <a class="lightbox" href="gallery/2004/2004 October/03.jpg" width="500" height="678" rel="group" num="97"></a>
         </div>
 
-        <span id="thumbs"><img src="i/vogueThumb/blank.png"></span>
+        <span id="thumbs"><img src="{%static 'Raul_Inc/Images/blank.png' %}"></span>
     </div>
 
 </div>
