--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -215,7 +215,7 @@
                         <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
                         <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                         <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
-                        <a href="{% url 'cat-view' 'Vases & Cachepots' %}">Vases and Cachepots</a>
+                        <a href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
                         <a href="{% url 'cat-view' 'Votives' %}">Votives</a>
                         <a>f</a>
                     </div>
