--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -27,7 +27,7 @@
 
     <div class="row" id="scrollHere">
         {% for product in cat_products %}
-
+        {% if product.active %}
 
             <input type="hidden" name='qty' type='number' placeholder='Quantity' class = "numberOfItems" min="1" max="50" value="1">
 
@@ -57,6 +57,7 @@
                 {% endif %}
         </div>
             </form>
+        {% endif %}
         {% endfor %}
     </div>
 
