--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -137,18 +137,18 @@
 
             <div class = "dropDownMenu">
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
-                <div class="dropDownContent">
-                    <div class="dropDownContentLinks">
-                        <a>Colored Glass Collection</a>
-                        <a>Floral Bird Cachepot Collection</a>
-                        <a>Blue Wave Cachepot & Bone Frame Collection</a>
-                        <a>Clear Glass Collection</a>
-                        <a>Lexi Cachepot & Cream Tealight Collection</a>
-                        <a>Ceramic & Cement Pot Collection</a>
-                        <a>Smoked Cut Glass Collection</a>
-                        <a>eylissa & norro vase collection</a>
-                    </div>
-                </div>
+<!--                <div class="dropDownContent">-->
+<!--                    <div class="dropDownContentLinks">-->
+<!--                        <a>Colored Glass Collection</a>-->
+<!--                        <a>Floral Bird Cachepot Collection</a>-->
+<!--                        <a>Blue Wave Cachepot & Bone Frame Collection</a>-->
+<!--                        <a>Clear Glass Collection</a>-->
+<!--                        <a>Lexi Cachepot & Cream Tealight Collection</a>-->
+<!--                        <a>Ceramic & Cement Pot Collection</a>-->
+<!--                        <a>Smoked Cut Glass Collection</a>-->
+<!--                        <a>eylissa & norro vase collection</a>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <div class = "dropDownMenu">
                 <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
@@ -246,13 +246,6 @@
                     <div class = "menuDropdown">
                         <button class = "mobile-dropdownButton" onclick = "mobileDropDown()">
                             new arrivals
-                            <i class="arrow down"></i>
-                        </button>
-                        <div id="mobile-dropdown" class="mobile-dropdownContent">
-                            <a href="#home">Home</a>
-                            <a href="#about">About</a>
-                            <a href="#Venue Book">Contact</a>
-                          </div>
                     </div>
                 </li>
                 <li>
