--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -74,7 +74,20 @@
                 text-align: center;
             }
 
-            .profile-tabcontent h4,li{
+            .profile-tabcontent h4{
+                background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                font-size:20px;
+                padding: 20px 30px;
+                font-weight: normal;
+                margin-block-start: 0;
+                margin-block-end: 0;
+                width: fit-content;
+                text-transform: none;
+            }
+
+            .profile-tabcontent li{
                 background: -webkit-linear-gradient(#f8f18e,#d6a55b);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
