--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -57,7 +57,7 @@
             <div class = "menuHeros">
                 <div class="menus">
                     <div class="text">
-                        <h2><a href ="{%static 'Raul_Inc/Doc/Wine.pdf'%}" target="blank">Cafe Menu</a></h2>
+                        <h2><a href ="{%static 'Raul_Inc/Doc/Cafe.pdf'%}" target="blank">Cafe Menu</a></h2>
                     </div>
                     <div class = "overlayImage">
                         <img src="{%static 'Raul_Inc/Images/CafeMenu.jpg'%}">
